--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.layout.aside.css">
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.layout.article.css">
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.layout.list.css">
+    <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.layout.grid.css">
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.css">
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.splash.css">
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.button.css">
@@ -60,6 +61,30 @@
         </article>
     </section>
 -->
+    <section id="foundation">
+        <header data-title="test"></header>
+        <footer class="toolbar with-labels"></footer>
+
+        <article>
+            <div class="row one red">.row.one</div>
+
+            <div class="row six blue">
+                <div class="one column orange"></div>
+                <div class="one column"></div>
+                <div class="four column orange">.four.column.orange</div>
+                <div class="one column"></div>
+                <div class="one column orange tall"></div>
+                <div class="one column "></div>
+                <div class="one column orange "></div>
+            </div>
+
+            <div class="row two green">
+                <div class="two columns centered red"></div>
+            </div>
+
+            <div class="row one yellow">.row.one.yellow</div>
+        </article>
+    </section>
 
     <section id="a" data-transition="pop" >
         <header data-title="a">
