New .splash elements

--- a/examples/test/boletus.html
+++ b/examples/test/boletus.html
@@ -47,26 +47,16 @@
     <section id="login" data-transition="slide">
         <article class="-indented splash ">
 
-            <!--
             <h1>Boletus</h1>
-            <label>Login para acceder a ofertas increibles</label>
-            -->
-
             <form>
-                <input type="text" class="rounded" placeholder="Your email" id="txt-signup-mail" value=""/>
-                <input type="password" class="rounded"  placeholder="Your username" id="txt-signup-name" value=""/>
-                <input type="password" class="rounded"  placeholder="Your username" id="txt-signup-name" value=""/>
+                <label>hello humanoid!! type your credentials</label>
+                <input type="text" class="rounded" placeholder="Username" id="txt-signup-mail" value=""/>
+                <input type="text" class="rounded"  placeholder="Email" id="txt-signup-name" value=""/>
+                <input type="password" class="rounded"  placeholder="Password" id="txt-signup-name" value=""/>
                 <a href="#main" data-target="section" class="button big green" data-icon="user">Login</a>
-
+                <label>or</label>
+                <a href="#main" data-target="section" class="button big facebook" data-icon="plus">Signup with Facebook</a>
             </form>
-
-            <form>
-                <input type="text" class="" placeholder="Your email" id="txt-signup-mail" value=""/>
-                <input type="password" class=""  placeholder="Your username" id="txt-signup-name" value=""/>
-                <a href="#main" data-target="section" class="button big green" data-icon="user">Login</a>
-
-            </form>
-
             <div class="copyright">This App is made by TAPQUO</div>
         </article>
     </section>
