--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -219,7 +219,7 @@
         </article>
 
         <article id="nav-2" class="list indented scroll">
-            <ul class="form">
+            <ul class="form minimal">
                 <li data-loading="black big"></li>
                 <li id="loading-code" style="background-color: grey;"></li>
                 <li class="padding">
