New classes for form: .rounded & .wrapper

--- a/examples/test/boletus.html
+++ b/examples/test/boletus.html
@@ -48,11 +48,11 @@
         <article class="-indented splash ">
 
             <h1>Boletus</h1>
-            <form>
+            <form class="wwrapper arounded">
                 <label>hello humanoid!! type your credentials</label>
-                <input type="text" class="rounded" placeholder="Username" id="txt-signup-mail" value=""/>
-                <input type="text" class="rounded"  placeholder="Email" id="txt-signup-name" value=""/>
-                <input type="password" class="rounded"  placeholder="Password" id="txt-signup-name" value=""/>
+                <input type="text" placeholder="Username" id="txt-signup-mail" value=""/>
+                <input type="text" placeholder="Email" id="txt-signup-name" value=""/>
+                <input type="password" placeholder="Password" id="txt-signup-name" value=""/>
                 <a href="#main" data-target="section" class="button big green" data-icon="user">Login</a>
                 <label>or</label>
                 <a href="#main" data-target="section" class="button big facebook" data-icon="plus">Signup with Facebook</a>
