--- a/examples/kitchen-sink/app/sections/aside-profiles.html
+++ b/examples/kitchen-sink/app/sections/aside-profiles.html
@@ -1,4 +1,4 @@
-<aside id="profiles" class="scrollable onright">
+<aside id="profiles" class="scrollable right">
     <div>
         <div class="anchor">Author of LungoJS</div>
         <a href="http://twitter.com/soyjavi" target="_blank" data-image="assets/images/avatars/soyjavi.jpg">Javi Jim&eacute;nez Villar</a>
