--- a/examples/kitchen-sink/app/sections/forms.html
+++ b/examples/kitchen-sink/app/sections/forms.html
@@ -78,7 +78,7 @@
                 <li class="anchor" data-icon="edit">Example of checkbox</li>
                 <li>
                     <label>Do you like LungoJS forms?</label>
-                    <label class="checkbox onright"><input type="checkbox" id="checkbox-0" checked/></label>
+                    <label class="checkbox right"><input type="checkbox" id="checkbox-0" checked/></label>
                 </li>
             </ul>
 
