--- a/examples/kitchen-sink/app/sections/lists.html
+++ b/examples/kitchen-sink/app/sections/lists.html
@@ -1,6 +1,6 @@
 <section id="lists">
     <header data-back="home" data-title="Lists" class="extended">
-        <nav class="onright">
+        <nav class="right">
             <a href="#" data-article="list-dinamic" class="button" data-icon="up"></a>
             <a href="#" data-article="list-dinamic" class="button prepend" data-icon="down"></a>
         </nav>
