--- a/examples/kitchen-sink/app/sections/navigation.html
+++ b/examples/kitchen-sink/app/sections/navigation.html
@@ -1,6 +1,6 @@
 <section id="navigation">
     <header data-back="home" data-title="Navigation">
-        <nav class="onright">
+        <nav class="right">
             <a href="#navigation-index" class="button" data-target="section"><abbr>Transitions</abbr></a>
         </nav>
     </header>
@@ -24,7 +24,7 @@
     <header data-back="left" data-title="Navigation"></header>
 
     <footer>
-        <nav class="onright">
+        <nav class="right">
             <a href="#nav-extra-1" data-target="article" class="current" data-icon="user"></a>
             <a href="#nav-extra-2" data-target="article" data-icon="calendar" data-count="17"></a>
             <a href="#nav-extra-3" data-target="article" data-icon="mail"></a>
