--- a/examples/kitchen-sink/app/sections/settings.html
+++ b/examples/kitchen-sink/app/sections/settings.html
@@ -1,6 +1,6 @@
 <section id="settings">
     <header data-back="home" data-title="Settings">
-        <nav class="onright">
+        <nav class="right">
             <a href="#settings_main" data-target="article" class="current" data-title="Settings" data-icon="user"></a>
             <a href="#settings_second" data-target="article" data-title="Chat" data-icon="chat"></a>
             <a href="#settings_third" data-target="article" data-title="Share Methods" data-icon="earth"></a>
