--- a/examples/kitchen-sink/index.html
+++ b/examples/kitchen-sink/index.html
@@ -64,8 +64,8 @@
 
     <section id="kitchen-sink">
         <header data-title="LungoJS Kitchen Sink">
-            <a href="#kitchen-sink-scroll" class="button onleft" data-target="aside" data-icon="items"></a>
-            <a href="#profiles" data-target="aside" data-article="welcome" class="button onright">Profiles</a>
+            <a href="#kitchen-sink-scroll" class="button left" data-target="aside" data-icon="items"></a>
+            <a href="#profiles" data-target="aside" data-article="welcome" class="button right">Profiles</a>
         </header>
 
         <!-- ============================= welcome ============================= -->
@@ -188,7 +188,7 @@
                         <small>Relationship field between &lt;header&gt; and &lt;a&gt;</small>
                     </li>
                     <li>
-                        <div class="onright" data-count="23 units"></div>
+                        <div class="right" data-count="23 units"></div>
                         data-count
                         <small>Creates counters of different &lt;elements&gt;</small>
                     </li>
