--- a/examples/test/app/sections/aside-profiles.html
+++ b/examples/test/app/sections/aside-profiles.html
@@ -1,7 +1,7 @@
-<aside id="profiles" class=" onright">
+<aside id="profiles" class=" right">
     <div>
         <header data-title="Favorites">
-            <nav class="plain onright">
+            <nav class="plain right">
                 <a href="#" data-icon="refresh"></a>
             </nav>
         </header>
@@ -10,14 +10,14 @@
             <ul >
                 <li class="">
                     <a href="#nav-1" data-target="article" data-image="assets/images/avatars/1.jpg">
-                        <div class="bubble onright">prueba</div>
+                        <div class="bubble right">prueba</div>
                         <strong>Name of friend</strong>
                         <small>Extra info: mail / phone</small>
                     </a>
                 </li>
                 <li class="">
                     <a href="#nav-2" data-target="article" data-image="assets/images/avatars/2.jpg">
-                        <span class="onright bubble">123</span>
+                        <span class="right bubble">123</span>
                         <strong>Name of friend</strong>
                         <small>Extra info: mail / phone</small>
                     </a>
