--- a/examples/test/app/sections/aside.html
+++ b/examples/test/app/sections/aside.html
@@ -1,4 +1,4 @@
-<aside id="kitchen-sink-scroll" class="small -scroll onleft">
+<aside id="kitchen-sink-scroll" class="small -scroll left">
     <nav>
         <a href="#nav-1" data-target="article" class="current" data-icon="clock"></a>
         <a href="#nav-2" data-target="article" data-icon="user" data-count="14"></a>
