--- a/examples/todo.js/index.html
+++ b/examples/todo.js/index.html
@@ -40,7 +40,7 @@
 
 	<section id="main">
 		<header data-title="ToDo.js">
-            <nav class="onright">
+            <nav class="right">
 			     <a href="#new" data-target="section" class="active" data-icon="plus"><abbr>New Task</abbr></a>
             </nav>
 		</header>
@@ -58,10 +58,10 @@
 
     <section id="view">
         <header data-title="View" >
-            <nav class="onleft">
+            <nav class="left">
                 <a href="#back" data-target="section" class="current" data-icon="left"><abbr>Back</abbr></a>
             </nav>
-            <nav class="onright">
+            <nav class="right">
                 <a href="#" id="btnDeleteTodo" class="active" data-icon="trash"><abbr>Delete</abbr></a>
             </nav>
         </header>
