--- a/examples/kitchen-sink/app/sections/buttons-extra.html
+++ b/examples/kitchen-sink/app/sections/buttons-extra.html
@@ -1,17 +1,17 @@
 <section id="buttons-extra">
     <header data-back="home" data-title="Example of buttons">
-        <nav class="onright">
+        <nav class="right">
             <a href="#" class="button red " data-icon="add">With icon</a>
             <a href="#" class="button arcticblue ">Text</a>
         </nav>
     </header>
 
     <footer>
-        <nav class="onleft">
+        <nav class="left">
             <a href="#" class="button blue ">Text</a>
             <a href="#" class="button yellow " data-icon="left"></a>
         </nav>
-        <a href="#" class="button orange onright" data-icon="right">onright</a>
+        <a href="#" class="button orange right" data-icon="right">right</a>
     </footer>
 
     <article></article>
