--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -88,7 +88,7 @@
 
     <section id="a" data-transition="pop" >
         <header data-title="a">
-            <nav class="onright">
+            <nav class="right">
                 <a href="#baaaa" data-target="section">B</a>
             </nav>
         </header>
@@ -105,15 +105,15 @@
 -->
     <section id="sec-1"  class="popa" data-transition="pop">
         <header class="extended">
-            <nav class="onleft">
+            <nav class="left">
                 <a href="#kitchen-sink-scroll" data-target="aside" data-icon="home"></a>
                 <a href="#kitchen-sink-scroll" data-article="nav-2" data-target="aside" data-icon="heart" data-count="8"></a>
             </nav>
-            <div class="onleft">
+            <div class="left">
                 <span class="title with-subtitle">Javi Jiménez Villar</span>
                 <span class="subtitle">@soyjavi</span>
             </div>
-            <nav class="onright ">
+            <nav class="right ">
                 <!--
                 <a href="#profiles" data-target="aside" data-label="User"></a>
                 <a href="#profiles" data-target="aside" data-icon="users" data-label="User"></a>
@@ -122,7 +122,7 @@
                 <a href="#profiles" data-target="aside" data-icon="user" data-count="1"></a>
             </nav>
 
-            <nav class="onright plain ">
+            <nav class="right plain ">
                 <a href="#" data-loading="white disable"></a>
                 <a href="#" data-loading="white "></a>
             </nav>
@@ -166,7 +166,7 @@
             <div class="three row grey">
                 <div class="six row green">
                     <div class="wrapper">
-                        <div class="onright" data-icon="calendar">June 9, 2012</div>
+                        <div class="right" data-icon="calendar">June 9, 2012</div>
                         <strong>LungoJS.2 Application</strong>
                         <small>by Javi Jimenez <div class="bubble grey">PRO</div></small>
                     </div>
@@ -190,7 +190,7 @@
                     <li class=" selectable" >
                         <a href="#" data-image="http://placehold.it/32x32">
 
-                            <div class="onright" data-icon="calendar">2 days ago</div>
+                            <div class="right" data-icon="calendar">2 days ago</div>
                             <strong>List: .selectable</strong>
                             <small>a: data-image</small>
                         </a>
@@ -199,7 +199,7 @@
                     <li class=" selectable" >
                         <a href="#" data-image="http://placehold.it/32x32">
 
-                            <div class="onright" data-icon="calendar">2 days ago</div>
+                            <div class="right" data-icon="calendar">2 days ago</div>
                             <strong>List: .selectable</strong>
                             <small>a: data-image</small>
                         </a>
@@ -208,7 +208,7 @@
                     <li class=" selectable" >
                         <a href="#" data-image="http://placehold.it/32x32">
 
-                            <div class="onright" data-icon="calendar">2 days ago</div>
+                            <div class="right" data-icon="calendar">2 days ago</div>
                             <strong>List: .selectable</strong>
                             <small>a: data-image</small>
                         </a>
@@ -241,7 +241,7 @@
                 </li>
                 <li  class="padding">
                     <label class="-pop">Do you like LungoJS forms?</label>
-                    <label class="checkbox onright"><input type="checkbox" id="checkbox-0" checked/></label>
+                    <label class="checkbox right"><input type="checkbox" id="checkbox-0" checked/></label>
                 </li>
 
                 <li class="padding">
@@ -282,7 +282,7 @@
                 <li class=" selectable" >
                     <a href="#" data-image="http://placehold.it/32x32">
 
-                        <div class="onright" data-icon="calendar">2 days ago</div>
+                        <div class="right" data-icon="calendar">2 days ago</div>
                         <strong>List: .selectable</strong>
                         <small>a: data-image</small>
                     </a>
@@ -295,7 +295,7 @@
                 </li>
                 <li class="red">
                     <a href="#"  data-icon="home">
-                        <div class="bubble red onright"><span class="icon map"></span>125m</div>
+                        <div class="bubble red right"><span class="icon map"></span>125m</div>
                         <strong>List: .red</strong>
                         <small data-icon="clock">a: data-icon & .bubble</small>
                     </a>
@@ -333,11 +333,11 @@
 
     <section id="sec-2" data-transition="pop">
         <header data-title="Auto title centered">
-            <nav class="onleft">
+            <nav class="left">
                 <a href="#back" data-target="section" class="cancel" data-icon="close" data-label="CANCEL"></a>
             </nav>
 
-            <nav class="onright ">
+            <nav class="right ">
                 <a href="#" class="accept" data-icon="check" data-label="ACCEPT"></a>
             </nav>
         </header>
