[BUG] Fixed: Incorrect box-shadow for nav.right

--- a/examples/test/boletus.html
+++ b/examples/test/boletus.html
@@ -43,7 +43,7 @@
 </head>
 
 <body class="app">
-
+<!--
     <section id="login" data-transition="slide">
         <article class="-indented splash ">
 
@@ -60,12 +60,14 @@
             <div class="copyright">This App is made by TAPQUO</div>
         </article>
     </section>
+ -->
 
     <section id="main" data-transition="slide">
         <header data-title="main" data-back="home">
 
             <nav class="left">
-                <a href="#" class="empty" data-icon="left" data-label="Volver"></a>
+                <a href="#" class="empty cancel " data-icon="close" ></a>
+                <a href="#" class="empty accept" data-icon="menu" ></a>
             </nav>
 
             <nav class="right">
