--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -347,7 +347,7 @@
     </section>
 
     <!-- Third parties dependencies -->
-    <script src="../../src/lib/QuoJS.js"></script>
+    <script src="../../src/lib/quo.debug.js"></script>
     <!-- LungoJS Libraries (Development mode)-->
     <script src="../../src/Lungo.js"></script>
     <script src="../../src/Lungo.App.js" ></script>
