lungo.icon.css is a new independiente stylesheet

--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -38,6 +38,11 @@
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.loading.css">
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.notification.css">
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.theme.scaffold.css">
+    <!--
+    <link rel="stylesheet" href="../../release/lungo.css">
+    <link rel="stylesheet" href="../../release/lungo.icon.css">
+    <link rel="stylesheet" href="../../release/lungo.theme.scaffold.css">
+    -->
     <!-- App Stylesheet -->
     <link rel="stylesheet" href="assets/stylesheets/app.css">
 </head>
@@ -346,9 +351,11 @@
         </article>
     </section>
 
-    <!-- Third parties dependencies -->
+    <!-- Lungo dependencies -->
     <script src="../../src/lib/quo.debug.js"></script>
-    <!-- LungoJS Libraries (Development mode)-->
+    <!--
+    <script src="../../release/lungo.js"></script>
+    -->
     <script src="../../src/Lungo.js"></script>
     <script src="../../src/Lungo.App.js" ></script>
     <script src="../../src/Lungo.Core.js"></script>
@@ -380,6 +387,7 @@
     <script src="../../src/boot/Lungo.Boot.Data.js"></script>
     <script src="../../src/boot/Lungo.Boot.Section.js"></script>
     <script src="../../src/boot/Lungo.Boot.Article.js"></script>
+
 
     <!-- LungoJS - Sandbox App -->
     <script src="app/app.js"></script>
