New icon and splash screen

--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>LungoJS 2.0 - Test</title>
+    <title>Lungo 2.0</title>
     <meta name="description" content="">
     <meta name="author" content="Javier Jiménez Villar (@soyjavi)">
     <!-- Mobile viewport optimization http://goo.gl/b9SaQ -->
