Changes on KitchenSink

--- a/examples/test/app/resources/sections/features.html
+++ b/examples/test/app/resources/sections/features.html
@@ -1,6 +1,6 @@
-<aside id="aside-controls" class="left">
-    <header data-title="Lungo Controls"></header>
-    <article id="article-controls" class="list scroll current">
+<aside id="features" class="left">
+    <header data-title="Features"></header>
+    <article class="list scroll current">
         <ul>
             <!-- Basic Layout -->
             <li>
@@ -11,54 +11,11 @@
                 </a>
             </li>
 
-            <!-- Grid System -->
+            <!-- List -->
             <li>
                 <a href="#list" data-target="section">
                     <div class="bubble right">8</div>
-                    <strong>Grid System</strong>
-                    <small>Indented, Scroll</small>
-                </a>
-            </li>
-
-            <!-- Asides -->
-            <li>
-                <a href="#list" data-target="section">
-                    <div class="bubble right">8</div>
-                    <strong>Asides</strong>
-                    <small>Indented, Scroll</small>
-                </a>
-            </li>
-            <!-- Buttons -->
-            <li>
-                <a href="#list" data-target="section">
-                    <div class="bubble right">8</div>
-                    <strong>Icons</strong>
-                    <small>Indented, Scroll</small>
-                </a>
-            </li>
-            <!-- Forms -->
-            <li>
-                <a href="#list" data-target="section">
-                    <div class="bubble right">8</div>
-                    <strong>Form Elements</strong>
-                    <small>Indented, Scroll</small>
-                </a>
-            </li>
-
-            <!-- Pulls -->
-            <li>
-                <a href="#list" data-target="section">
-                    <div class="bubble right">8</div>
-                    <strong>Buttons</strong>
-                    <small>Indented, Scroll</small>
-                </a>
-            </li>
-
-            <!-- Notifications -->
-            <li>
-                <a href="#list" data-target="section">
-                    <div class="bubble right">8</div>
-                    <strong>Events</strong>
+                    <strong>Lists</strong>
                     <small>Indented, Scroll</small>
                 </a>
             </li>
@@ -68,7 +25,60 @@
                 <a href="#notification" data-target="section">
                     <div class="bubble right">8</div>
                     <strong>Notifications</strong>
+                    <small>Indented, Scroll</small>
+                </a>
+            </li>
+
+            <!-- Icons -->
+            <li>
+                <a href="#icon" data-target="section">
+                    <div class="bubble right">8</div>
+                    <strong>Icons</strong>
                     <small>Messages, skskks</small>
+                </a>
+            </li>
+
+
+            <!-- Grid System -->
+            <li>
+                <a href="#" data-target="section">
+                    <div class="bubble right">8</div>
+                    <strong>Grid System</strong>
+                    <small>Indented, Scroll</small>
+                </a>
+            </li>
+
+            <!-- Asides -->
+            <li>
+                <a href="#" data-target="section">
+                    <div class="bubble right">8</div>
+                    <strong>Asides</strong>
+                    <small>Indented, Scroll</small>
+                </a>
+            </li>
+            <!-- Buttons -->
+            <li>
+                <a href="#" data-target="section">
+                    <div class="bubble right">8</div>
+                    <strong>Icons</strong>
+                    <small>Indented, Scroll</small>
+                </a>
+            </li>
+            <!-- Forms -->
+            <li>
+                <a href="#" data-target="section">
+                    <div class="bubble right">8</div>
+                    <strong>Form Elements</strong>
+                    <small>Indented, Scroll</small>
+                </a>
+            </li>
+
+            <!-- Pulls -->
+            <li>
+                <a href="#" data-target="section">
+                    <div class="bubble right">8</div>
+                    <strong>Buttons</strong>
+                    <small>Indented, Scroll</small>
                 </a>
             </li>
         </ul>
