Fixed article in aside set .current

--- a/examples/test/app/resources/sections/features.html
+++ b/examples/test/app/resources/sections/features.html
@@ -1,6 +1,6 @@
 <aside id="features" class="left">
     <header data-title="Features"></header>
-    <article class="list scroll current">
+    <article class="list scroll">
         <ul>
             <!-- Basic Layout -->
             <li>
