--- a/examples/test/app/resources/sections/features.html
+++ b/examples/test/app/resources/sections/features.html
@@ -2,6 +2,22 @@
     <header data-title="Features"></header>
     <article class="list scroll">
         <ul>
+            <li>
+                <a href="#art-1" data-target="article">
+                    <strong>Art-1</strong>
+                </a>
+            </li>
+            <li>
+                <a href="#art-2" data-target="article">
+                    <strong>Art-2</strong>
+                </a>
+            </li>
+            <li>
+                <a href="#art-3" data-target="article">
+                    <strong>Art-3</strong>
+                </a>
+            </li>
+
             <!-- Basic Layout -->
             <li>
                 <a href="#list" data-target="section">
