--- a/examples/test/kitchensink.html
+++ b/examples/test/kitchensink.html
@@ -62,7 +62,8 @@
         </header>
 
         <article id="art-1" data-loading="black"></article>
-
+        <article id="art-2" data-loading="white"></article>
+        <article id="art-3" data-loading="black"></article>
     </section>
 
     <!-- Lungo dependencies -->
