Load asides in different folder

--- a/examples/test/kitchensink.html
+++ b/examples/test/kitchensink.html
@@ -109,9 +109,9 @@
             version: '2.0',
             sugars: ['map', 'pull'],
             resources: {
-                sections: ['features.html', 'aside-profiles.html', 'notification.html', 'list.html', 'icon.html'],
+                sections: [ 'notification.html', 'list.html', 'icon.html'],
                 templates: [],
-                asides: []
+                asides: ['features.html', 'profiles.html']
             }
         });
     </script>
